files/nfs-client.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-client-provisioner
  labels:
    app: nfs-client-provisioner
  # replace with namespace where provisioner is deployed
  namespace: nfs-client
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-client-provisioner
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccountName: nfs-client-provisioner
      containers:
      - name: nfs-client-provisioner
        image: gcr.io/k8s-staging-sig-storage/nfs-subdir-external-provisioner:v4.0.0
        volumeMounts:
          - name: nfs-client-root
            mountPath: /persistentvolumes
      volumes:
      - name: nfs-client-root
        nfs:
          server: kubeserver.localdomain
          path: /pv
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      nodeSelector:
        beta.kubernetes.io/os: linux
